Fixed Alignment

--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ hr.line {
 .savings {
   margin-top: -5.5%;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background: transparent;
   display: inline-block;
 }
@@ -475,7 +475,7 @@ hr.line {
 .global {
   margin-top: -5.5%;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background: transparent;
 }
 /* rgba(6, 64, 19, 0.7) 0%, rgb(116, 254, 36) 79%, rgb(126, 255, 42) 100%) 100% center / cover, url(https://cdn.robinhood.com/assets/generated_assets/brand/_next/static/images/noise__d63eaf5….svg) rgb(0, 200, 5) */
@@ -524,7 +524,7 @@ hr.line {
 .loan {
   margin-top: -5.5%;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background: transparent;
 }
 
@@ -567,7 +567,7 @@ hr.line {
 .tools {
   margin-top: -5.5%;
   width: 100%;
-  height: 95vh;
+  height: 105vh;
   background: transparent;
 }
 
@@ -813,6 +813,7 @@ hr.line {
 
 .about {
   height: 220vh;
+  background-color: white;
 }
 
 .about-head {
